# delcui

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure  example.txt
.github/workflows/: test_contextgrep.yml
src/: ContextGrep.cpp  ContextGrep.h  main.cpp
tests/: TestContextGrep.cpp
